<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoid</name>
  <version>0.0.1</version>
  <description>Minimal reactive obstacle avoidance node: subscribe LaserScan, publish cmd_vel.</description>

  <maintainer email="user@example.com">bcsh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
